Beautifully app, change api url

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,3 +1,12 @@
+@keyframes showAnim {
+  0%{
+    transform: translateY(40px);
+  }
+  100%{
+    transform: translateY(0);
+  }
+}
+
 .card {
   background-color: #fff;
   display: flex;
@@ -6,14 +15,32 @@
   border-radius: 32px;
   position: relative;
   justify-content: space-between;
+  transition: transform 0.2s;
+}
+
+.card:nth-child(even) {
+  animation: showAnim 0.1s ease-in-out;
+}
+
+.card:nth-child(odd) {
+  animation: showAnim 0.2s ease-in-out;
 }
 
 .card:hover {
   box-shadow: 0 1px 17px rgba(0, 0, 0, 0.1);
+  transform: translateY(-5px);
 }
 
 .image {
   max-width: 100%;
+  margin-bottom: 8px;
+  height: 180px;
+  object-fit: contain;
+  box-sizing: border-box;
+}
+
+.loader {
+  height: 180px;
   margin-bottom: 8px;
 }
 
