--- a/src/components/Catalog/Catalog.module.css
+++ b/src/components/Catalog/Catalog.module.css
@@ -1,8 +1,8 @@
 .catalog {
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   min-height: 60vh;
+  align-items: center;
 }
 
 .nothing {
