--- a/src/components/Catalog/Filter/Control/Control.module.css
+++ b/src/components/Catalog/Filter/Control/Control.module.css
@@ -1,3 +1,9 @@
+.control {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
 .button {
   background-color: #000;
   color: #fff;
@@ -6,7 +12,6 @@
   font-size: 22px;
   padding: 6px 32px;
   border-radius: 8px;
-  margin-bottom: 16px;
 }
 
 .applyFilterButton {
